<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercise13Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button16"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/gradient1"
            android:text="@string/phy6"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button21"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient1"
            android:text="@string/phy7"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button22"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient1"
            android:text="@string/phy8"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button21" />

        <Button
            android:id="@+id/button23"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient1"
            android:text="@string/phy9"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button22" />

        <Button
            android:id="@+id/button24"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient1"
            android:text="@string/phy10"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button23" />
        <ImageButton
            android:id="@+id/imageButton17"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="340dp"
            android:background="#C8B082C4"
            android:src="?attr/homeAsUpIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>