<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercise11Fragment">
    <!--<include layout="@layout/tolbar"/>-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button71"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/gradient1"
            android:gravity="center"
            android:text="@string/expp1"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button12"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/expp2"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:background="@drawable/gradient1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button71" />

        <Button
            android:id="@+id/button13"
            android:layout_width="300dp"
            android:layout_height="95dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:background="@drawable/gradient1"
            android:text="@string/expp3"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button14"
            android:layout_width="300dp"
            android:layout_height="95dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/expp4"
            android:background="@drawable/gradient1"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <Button
            android:id="@+id/button15"
            android:layout_width="300dp"
            android:background="@drawable/gradient1"
            android:layout_height="95dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/expp5"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <ImageButton
            android:id="@+id/imageButton15"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="340dp"
            android:background="#C8B082C4"
            android:src="?attr/homeAsUpIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>