<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NUtrition1Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button46"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:background="@drawable/gradient1"
            android:gravity="center"
            android:text="@string/nut1"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.084" />

        <Button
            android:id="@+id/button47"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient1"
            android:gravity="center"
            android:text="@string/nut2"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button46" />

        <Button
            android:id="@+id/button48"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:background="@drawable/gradient1"
            android:gravity="center"
            android:text="@string/nut3"
            android:layout_marginTop="30dp"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button47" />

        <Button
            android:id="@+id/button49"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient1"
            android:gravity="center"
            android:text="@string/nut4"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button48" />

        <Button
            android:id="@+id/button50"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient1"
            android:gravity="center"
            android:text="@string/nut5"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button49" />

        <ImageButton
            android:id="@+id/imageButton39"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="340dp"
            android:background="#C8B082C4"
            android:src="?attr/homeAsUpIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>