<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercise1Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button8"
            android:layout_width="240dp"
            android:layout_height="110dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/gradient1"
            android:gravity="center"
            android:text="@string/exp1"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button9"
            android:layout_width="240dp"
            android:layout_height="110dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient1"
            android:gravity="center"
            android:onClick="onclick2"
            android:text="@string/exp2"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/button10"
            android:layout_width="240dp"
            android:layout_height="110dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient1"
            android:gravity="center"
            android:text="@string/exp3"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button11"
            android:layout_width="240dp"
            android:layout_height="110dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient1"
            android:gravity="center"
            android:text="@string/exp4"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button10" />
        <ImageButton
            android:id="@+id/imageButton19"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="340dp"
            android:background="#C8B082C4"
            android:src="?attr/homeAsUpIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>